friends and alluser toggle, alluser hidden by default, chat object for alluser fixed

--- a/django/backend/static/css/chat.css
+++ b/django/backend/static/css/chat.css
@@ -134,6 +134,10 @@ input[type="text"] {
     color: white;
 }
 
+.hidden {
+    display: none;
+}
+
 
 /*message formatting*/
 
